--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,20 @@ body {
   color: white;
 }
 
+form, .filterableProductTable {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+input {
+  margin-bottom: 5px;
+}
+
 th {
   border: 1px solid white;
   padding: 5px 20px;
